--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,11 @@
          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
          crossorigin="anonymous"
       />
-      <title>React App</title>
+      <script
+         src="https://kit.fontawesome.com/5f2a29b542.js"
+         crossorigin="anonymous"
+      ></script>
+      <title>Movie App</title>
    </head>
    <body>
       <noscript>You need to enable JavaScript to run this app.</noscript>
